archived/plex/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  serviceName: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      nodeSelector:
        kubernetes.io/hostname: node7.k8s.cajun.pro
      restartPolicy: Always
      hostNetwork: true
      hostPID: true
      containers:
      - name: plex
        image: plexinc/pms-docker:plexpass
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
              - cat
              - /tv/healthcheck
          initialDelaySeconds: 60
          periodSeconds: 60
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "8Gi"
            cpu: "4"
            nvidia.com/gpu: "1"
        volumeMounts:
             - mountPath: /config
               name: config
             - mountPath: /tv
               name: tv
               readOnly: true
             - mountPath: /tv4k
               name: tv4k
               readOnly: true
             - mountPath: /movies
               name: movies
               readOnly: true
             - mountPath: /movies4k
               name: movies4k
               readOnly: true
             - mountPath: /audiobooks
               name: audiobooks
               readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex
        - name: tv
          nfs:
            server: 10.0.10.211
            path: /mnt/media/tv
        - name: tv4k
          nfs:
            server: 10.0.10.211
            path: /mnt/media/tv4k
        - name: movies
          nfs:
            server: 10.0.10.211
            path: /mnt/media/movies
        - name: movies4k
          nfs:
            server: 10.0.10.211
            path: /mnt/media/movies4k
        - name: audiobooks
          nfs:
            server: 10.0.10.211
            path: /mnt/media/audiobooks
