archived/plex/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app: plex
spec:
  ports:
  - port: 32400
    targetPort: 32400
    protocol: TCP
    name: http
  - port: 9594
    targetPort: 9594
    protocol: TCP
    name: metrics
  selector:
    app: plex
